package services.StorageServices.DataTransferObjects;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class SubjectDTO {
    private String id;
    private String name;
    private int noCredits;
}
